<resources>
    <string name="app_name">Droidodoro</string>
    <!-- CONFIGURATION -->
    <string name="config_login">Login</string>
    <string name="config_fetching_boards">Fetching boards..</string>
    <string name="config_import">Import Boards</string>
    <string name="config_different_lists">The three chosen lists must be different from each other</string>
    <string name="config_fetching_lists">Fetching lists..</string>

    <!-- TASKS -->
    <string name="tasks_todo">Todo</string>
    <string name="tasks_doing">Doing</string>
    <string name="tasks_done">Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timer_start">Start</string>
    <string name="timer_pause">Pause</string>
    <string name="timer_restart">Restart</string>
    <string name="timer_stop">Stop</string>
    <string name="timer_done">Done</string>
    <string name="timer_short_break">Short Break</string>
    <string name="timer_long_break">Long Break</string>
    <string name="timer_end_break">End Break</string>

    <string name="configuration">Configuration</string>

    <string name="trello_comment">%1$d pomodoros, %2$s time spent</string>
    <string name="pomodoro_finished">Pomodoro</string>
    <string name="pomodoro_task_finished">Your task is finished</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="configuration_boards_text">Boards</string>
    <string name="configuration_todo_text">TODO</string>
    <string name="time_spent">Tot Time Spent: %1$s</string>
    <string name="tot_pomodoros">Tot Pomodoros: %1$d</string>

</resources>
