<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_small"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_login"
        android:id="@+id/configuration_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        style="@style/ConfigText"
        android:text="@string/configuration_boards_text"/>
    <Spinner
        android:id="@+id/configuration_boards"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        style="@style/ConfigText"
        android:text="@string/tasks_todo"/>
    <Spinner
        android:id="@+id/configuration_todo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        style="@style/ConfigText"
        android:text="@string/tasks_doing"/>
    <Spinner
        android:id="@+id/configuration_doing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        style="@style/ConfigText"
        android:text="@string/tasks_done"/>
    <Spinner
        android:id="@+id/configuration_done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_import"
        android:id="@+id/configuration_import"/>

</LinearLayout>